[project]
name = "mimictest"
version = "0.1"
dependencies = [
    "torch",
    "torchvision",
    "diffusers",
    "einops",
    "transformers",
    "accelerate",
    "moviepy",
    "wandb",
    "tqdm",
    "stable-baselines3",
]

[project.optional-dependencies]
florence = [
    "timm",
    "flash-attn",
]
pusht = [
    "gym-pusht",
    "zarr",
]


[tool.setuptools]
packages = ["mimictest"]
