[project]
name = "mimictest"
version = "0.1"
dependencies = [
    "torch",
    "torchvision",
    "diffusers",
    "einops",
    "transformers",
    "accelerate",
    "moviepy",
    "wandb",
    "tqdm",
    "stable-baselines3",
]

[project.optional-dependencies]
florence = [
    "timm",
    "flash-attn",
]
pusht = [
    "scikit-image==0.19.3",
    "scikit-video==1.1.11",
    "zarr==2.12.0",
    "numcodecs==0.10.2",
    "pygame==2.1.2",
    "pymunk==6.2.1",
    "gym==0.26.2",
    "shapely==1.8.4",
]

[tool.setuptools]
packages = ["mimictest"]
